<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.unice.myblizzardcontact.activities.profile.ShareActivity"
    tools:showIn="@layout/activity_share">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="top"
        android:background="?attr/colorPrimaryDark">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="99dp"
            android:layout_gravity="top|center"
            android:background="?attr/colorPrimary">

            <ImageView
                android:id="@+id/share_sms_icon_id"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/activity_sms_send_sms"
                android:src="@drawable/share_icons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/activity_share_share_your_profile"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frameLayout">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="330dp"
            android:layout_gravity="top|center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fillViewport="false">

            <LinearLayout
                android:id="@+id/list_phone_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/activity_share_to"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/first_phone_number_id"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="phone" />
            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/add_number_icon_id"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="right|top"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/activity_share_new_phone"
            android:src="@drawable/add_icons" />

    </FrameLayout>
</RelativeLayout>
