<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.contacts.ContactsActivity"
    tools:showIn="@layout/activity_contacts">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimaryDark">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="49dp"
            android:background="?attr/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:text="@string/activity_contacts_sort_by"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/name_short_id"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_contacts_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <FrameLayout
                android:id="@+id/block_sort_option_id"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:longClickable="false">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:contentDescription="@string/activity_contacts_show_option_sort"
                    android:src="@drawable/arrow_down_icons" />
            </FrameLayout>

        </LinearLayout>
    </FrameLayout>

    <ListView
        android:id="@+id/contact_list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frameLayout"
        android:headerDividersEnabled="false"
        tools:listitem="@layout/item_contacts" />

</RelativeLayout>
