<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.photo.PhotoActivity"
    tools:showIn="@layout/activity_photo">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="300dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/photo_profile_id"
                android:layout_width="257dp"
                android:layout_height="257dp"
                android:layout_gravity="center"
                android:contentDescription="@string/activity_profile_photo_description"
                app:civ_border_color="?attr/colorAccent"
                app:civ_border_width="3dp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="?attr/colorPrimaryDark"
                android:padding="1dp">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:background="?attr/colorPrimary">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/take_photo_id"
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/activity_photo_take_photo"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>
                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="?attr/colorPrimaryDark"
                android:padding="1dp">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:background="?attr/colorPrimary">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/gallery_photo_id"
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/activity_photo_gallery"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>
                </FrameLayout>
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
